--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # 카카오 REST API 키
 # https://developers.kakao.com 에서 발급
-KAKAO_API_KEY=your_kakao_rest_api_key_here
+KAKAO_API_KEY=your_kakao_api_key_here
+
+# 나이스 교육정보 개방 포털 API 키
+# https://open.neis.go.kr 에서 발급
+NEIS_API_KEY=your_neis_api_key_here
